--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,14 @@
             android:layout_alignTop="@id/btn_Value"
             android:background="@android:color/holo_orange_dark"
             android:textColor="@android:color/white"
-            android:textStyle="bold" android:layout_marginTop="-32dp"/>
+            android:textStyle="bold"
+            android:layout_marginTop="-32dp"
+            android:text="testing passing"/>
     <Button
             android:id="@+id/btn_Value"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:onClick="onClick"
-            android:text="Button" android:layout_marginBottom="1dp"/>
+            android:text="Button"/>
     
 </RelativeLayout>
